arrow functions! Are they in a future video?
Specifically, it looks like he gets to them in video lecture number 67, if you'd like you can follow this link.

--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -1,1 +1,183 @@
-[Need help in some javascript code](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/5231742 "JQuery is almost obsolete, you can toggle hide CSS classes without it now, but I think it still serves as a good example of how to separate your concerns. When you are setting a new line of CSS in your JavaScript it starts to feel like an architectural mess very soon. Your question seems to be more about how to change the class of all the other nav.div at the same time. You'd just want to set the logic on the opposite side of the toggle to make sure all other classes are off. I think using an array for that is overkill. Because you just learned a hammer they all look like nails when you really just want a broader toggle.toggle hide class")
+1. [Need help in some javascript code](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/5231742 "JQuery is almost obsolete, you can toggle hide CSS classes without it now, but I think it still serves as a good example of how to separate your concerns. When you are setting a new line of CSS in your JavaScript it starts to feel like an architectural mess very soon. Your question seems to be more about how to change the class of all the other nav.div at the same time. You'd just want to set the logic on the opposite side of the toggle to make sure all other classes are off. I think using an array for that is overkill. Because you just learned a hammer they all look like nails when you really just want a broader toggle.toggle hide class")
+
+1. [I thought you would also talk about arrow functions! Are they in a future video?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3872940 "Specifically, it looks like he gets to them in video lecture number 67, if you'd like you can follow this link.")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
