Can someone explain to me the history part?
'Modern JavaScript from the Beginning', at the 10-minute mark  in video lecture number 19 he comments that the history object is a part of the window object

--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -2,7 +2,7 @@
 
 1. [I thought you would also talk about arrow functions! Are they in a future video?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3872940 "Specifically, it looks like he gets to them in video lecture number 67, if you'd like you can follow this link.")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [Can someone explain to me the history part?](https://www.udemy.com/mern-stack-front-to-back/learn/v4/questions/5208648 "'Modern JavaScript from the Beginning', at the 10-minute mark  in video lecture number 19 he comments that the history object is a part of the window object ")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
