--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -4,7 +4,7 @@
 
 1. [Can someone explain to me the history part?](https://www.udemy.com/mern-stack-front-to-back/learn/v4/questions/5208648 "'Modern JavaScript from the Beginning', at the 10-minute mark  in video lecture number 19 he comments that the history object is a part of the window object ")  
 
-1. [strict mode and the variable problem with the loop](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3650498 "I tested your hypothesis just to make sure, it appears to have behave the same as it did before applying 'use strict';.")  
+1. [strict mode and the variable problem with the loop](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3650498 "I tested your hypothesis just to make sure, it appears to have behaved the same as it did before applying 'use strict';.")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
