--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -6,7 +6,7 @@
 
 1. [strict mode and the variable problem with the loop](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3650498 "I tested your hypothesis just to make sure, it appears to have behaved the same as it did before applying 'use strict';.")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [document.all[1];](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/4692434 "Screenshot what your index.html file looks like")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
