Is there an equivalant add-on for Sublime?
babel-sublime-snippets?

--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -8,7 +8,7 @@
 
 1. [document.all[1];](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/4692434 "Screenshot what your index.html file looks like")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [Is there an equivalant add-on for Sublime?](https://www.udemy.com/mern-stack-front-to-back/learn/v4/questions/5228834 "babel-sublime-snippets?")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
