what is a Node and whats its use ?
Don't confuse a node with thee Node
It's just an abstract shape
If you look in your file explorer, each directory is a node because it is a central connecting point for the files it contains. If you traverse down to the next node, you'll find a file.. which is a central connecting point for all of the ASCII characters it contains.
Nth Child is like a variable where N might be firstborn, last born or any sibling in between, but should not include grandchildren.. they are further down the node structure.  
MDN is Mozilla Developer's Network which is basically FireFox
their docs are generally preferred as being slightly more detailed than W3C

--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -10,7 +10,12 @@
 
 1. [Is there an equivalant add-on for Sublime?](https://www.udemy.com/mern-stack-front-to-back/learn/v4/questions/5228834 "babel-sublime-snippets?")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [what is a Node and whats its use ? Also, as the topic says traversing the DOM , for other ways in MDN can anyone share the link.](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/5241056 "Don't confuse a node with thee Node
+It's just an abstract shape
+If you look in your file explorer, each directory is a node because it is a central connecting point for the files it contains. If you traverse down to the next node, you'll find a file.. which is a central connecting point for all of the ASCII characters it contains.
+Nth Child is like a variable where N might be firstborn, last born or any sibling in between, but should not include grandchildren.. they are further down the node structure.  
+MDN is Mozilla Developer's Network which is basically FireFox
+their docs are generally preferred as being slightly more detailed than W3C")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
