--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -17,7 +17,7 @@ Nth Child is like a variable where N might be firstborn, last born or any siblin
 MDN is Mozilla Developer's Network which is basically FireFox
 their docs are generally preferred as being slightly more detailed than W3C")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [Beginners?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/5074764 "Brad is like a band's band.. he's a developer's developer. I searched his channel for 'beginners' he has videos for HTML & CSS as well.. JavaScript Fundamentals For Beginners")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
