saving text in console.log browser console instant
Around the 2 minute mark of lecture 28, he mentions that some elements have default behaviors that sound similar to what you're getting.

--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -19,7 +19,7 @@ their docs are generally preferred as being slightly more detailed than W3C")
 
 1. [Beginners?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/5074764 "Brad is like a band's band.. he's a developer's developer. I searched his channel for 'beginners' he has videos for HTML & CSS as well.. JavaScript Fundamentals For Beginners")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [when saving text in console.log it only pops up in browser console for an instant and desappears, any suggestions?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/4051452 "Around the 2 minute mark of lecture 28, he mentions that some elements have default behaviors that sound similar to what you're getting.")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
