--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -21,7 +21,7 @@ their docs are generally preferred as being slightly more detailed than W3C")
 
 1. [when saving text in console.log it only pops up in browser console for an instant and desappears, any suggestions?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/4051452 "Around the 2 minute mark of lecture 28, he mentions that some elements have default behaviors that sound similar to what you're getting.")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [related to html](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3429022 "I didn't see the link, so here it is.. 'When to use the button element'")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
