--- a/2018/10/09.md
+++ b/2018/10/09.md
@@ -23,7 +23,7 @@ their docs are generally preferred as being slightly more detailed than W3C")
 
 1. [related to html](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/3429022 "I didn't see the link, so here it is.. 'When to use the button element'")  
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
+1. [e is undefined?](https://www.udemy.com/modern-javascript-from-the-beginning/learn/v4/questions/4095552 "function runEvent(e)e is the data being passed in, which is the event object initialized with .addEventListener  on line 6 two and a half minutes into the video")  
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")  
 
