Ruizhen · Lecture 32 · 2 years ago

--- a/2020/12/09.md
+++ b/2020/12/09.md
@@ -28,15 +28,56 @@
 
 1. [Why the CLEAR TASKS button is a link? Line 35 index.js](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/13346716 "Technically you could change it to a div and it'd still work the same. I think in some ways it's just tradition. If he didn't use the event listeners you'd still need a way to trigger the action of clearing, links have been a common way to do that in the past. Making it a div doesn't give any distinction or clarity, since divs are the most common html element, making it a link instead gives some cue that it'll trigger an action, even though he's doing that with the event listener now, it still indicates with semantics that element is going to be 'linked' to some action. You could also make it a span or just as an experiment try changing it to button or even monika or anything.. as long as it has a name that gives you a hint as to what it's going to do for you. But a link is another form of event listener that the browser knows to listen for by default, so I've seen other projects uses the links as a trigger to fire an action in the java-script. ")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [What about the i class "fa fa-remove" is not the children of?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757276#questions/11778354 "If I understand your question..I went back to lecture 26 where he mentions children of children, but just getting the grandchild didn't seem to be enough. I kept getting undefined. Eventfully I tried adding the zero index and finally that narrowed it down to fa & fa-remove.")
+
+1. [I was wondering why I don't see things like e.target.innerText in the intellisense when typing? Is there a plugin I'm missing?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757278#questions/10847670 "are you not getting any suggestions on your intelliSense at all, or just not as many as you'd like. I don't see e.target.innerText on mine or Brad's either for that matter.. but I do get addEventListen, id and several others. The documentation says it should be included out of the box for JavaScript and that if it's not working it literally says to just try turning it off and back on again. So maybe on your next reboot it's picking it up now? https://code.visualstudio.com/docs/editor/intellisense#_why-am-i-not-getting-any-suggestions")
+
+1. [In event does it trigger all the events of parent ,whether they are same to the child event or not? like in the example shown they had the same event of "click".](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757286#questions/11212575 "the short answer is it only triggers the same event, I did some experimenting, but it was hard to find another event that would allow me to click, but not have a mouse down, a mouse up, or no other type of movement that wouldn't also be triggered by a parallel event. But to clarify, it triggers any and only ancestors listening to that same event, I copied in the other events from 2 lectures previously to have them handy as a reference to find other events for experimenting with.// EVENT BUBBLING
+document.querySelector('.card-title').addEventListener('click', function () {
+  console.log('card title 1st bubble');
+});
+document.querySelector('.card-content').addEventListener('dblclick', function () {
+  console.log('card content dblclick no bubble here');
+});
+document.querySelector('.card').addEventListener('dblclick', function () {
+  console.log('card mousedown no bubble here');
+});
+document.querySelector('.col').addEventListener('click', function () {
+  console.log('click after skipping parent and granparent triggers great granparent');
+});
+// Click
+// clearBtn.addEventListener('click', runEvent);
+// Doubleclick
+// clearBtn.addEventListener('dblclick', runEvent);
+// Mousedown
+// clearBtn.addEventListener('mousedown', runEvent);
+// Mouseup
+// clearBtn.addEventListener('mouseup', runEvent);
+// Mouseenter
+// card.addEventListener('mouseenter', runEvent);
+// Mouseleave
+// card.addEventListener('mouseleave', runEvent);
+// Mouseover
+// card.addEventListener('mouseover', runEvent);
+// Mouseout
+// card.addEventListener('mouseout', runEvent);
+// Mousemove
+// card.addEventListener('mousemove', runEvent);")
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [What's the need for not putting event under the body? Since the events will delegate, what's the difference between putting it under the ul and body?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757286#questions/5896120 "at 6:52 he says you could put it on anything.. (which he probably means any ancestor in the lineage) you can kind of hear him thinking out loud at that point, but he thought the body would be a more robust example of the issue. As an experiment, you should be able to change body to ul and everything else should still work the same.oops, my experiment failed, and it may be another reason he focused on the body.. just changing body to ul wasn't enough, I kept getting ul is not defined, so I had to make sure I isolated it first with a querySelector, but then it worked as expected.
+    // document.body.addEventListener('click', deleteItem);
+    // document.ul.addEventListener('click', deleteItem);
+    let ruizUL = document.querySelector('ul');
+    ruizUL.addEventListener('click', deleteItem);
+    function deleteItem(e) {
+      if (e.target.parentElement.classList.contains('delete-item')) {
+        console.log('delete item');
+        e.target.parentElement.parentElement.remove();
+      }
+    }
+")
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
