--- a/2020/12/09.md
+++ b/2020/12/09.md
@@ -79,7 +79,16 @@ document.querySelector('.col').addEventListener('click', function () {
     }
 ")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [COOKIES PLEASE Hey could you make an addition to this for cookies, perhaps include the path from a marketing campaign to persisting ad info to cookies and such. Thanks. Love what you have offered so far.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757290#questions/3782208 "I searched his YouTube channel for cookies and I'm surprised I didn't find more on them.. he touches on them periodically, but generally in the context of another subject.
+Node.js API Authentication With JWT
+I do feel like I got a lot from his API course.. he goes into using Postman and makes extensive use of cookies in that course.
+Udemy Course Alert - Node.js API Masterclass
+specifically, he mentions cookies in 8 different lectures, 48, 49 & 50 are probably what I'm remembering..")
+
+1. [Fa-remove icon isn't showing up
+   For some reason, the remove icon isn't showing up on the right side. Here's the screenshot and my code. What am I missing?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/13372176 "comparing your code to his, the differences are minor, except for double or single quotes, but it does look like you've tried to update your external scripts tags. I'd start by pinning to the exact numbers he's referenced, just to make sure and then if you still wanted to update you'd know you're on the right track. But what your asking about is a font awesome icon and you are loading it from a different source. His link to font-awesome has bootstrap in the href and yours has pro
+and are you on the edge browser? he has one line near the top of his HTML that you don't have at all
+and cdns like to stay in the cache, so you might want to make sure that's cleared out for a refresh")
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
@@ -195,11 +204,8 @@ document.querySelector('.col').addEventListener('click', function () {
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [Stop registering the same book twice.
+   How can I stop from registering the same book twice. The "isbn" is always unique . and get an alert the book is already exist. any tips](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757290#questions/13369738 "That is definitely possible, but you'll have to think through the extra steps of complexity. You'll probably want something like a for loop to go through the array of isbn numbers to see if it's already in there and then you could call that from the validation check as an if-else statement, after the if and before the else that are already in it. If you are still stuck in a couple of days I'll see if I can code it this weekend.")
 
 ## [Node.js API Masterclass With Express & MongoDB](https://www.udemy.com/course/modern-javascript-from-the-beginning/ 'Node.js API Masterclass With Express & MongoDB')
 
@@ -208,3 +214,9 @@ document.querySelector('.col').addEventListener('click', function () {
 1. [It is not clear to me what is the advantage of using pm2 instead of npm start. Could somebody please discuss this?](https://www.udemy.com/course/nodejs-api-masterclass/learn/lecture/16582202#questions/12843349 "The advantages of a process manager would be automation. If your server happens to crash while you're asleep it'd still be down when you wake up and you might still not be aware of it and then you'd need to log in and relaunch it manually. More recently I've moved this to DockerFiles that you can set to always restart or restart except when shutdown etc. But the difference between PM2 and npm start is that it can take care of itself automatically and you don't have to be there to babysit the server all day.")
 
 1. [Production Mode](https://www.udemy.com/course/nodejs-api-masterclass/learn/lecture/16582202#questions/12729972 "It looks like PM2 defaults to development To generate a sample process file I'd type this command: pm2 ecosystem This will generate a sample ecosystem.config.js")
+
+1. [database seeder isn't working when trying to delete data? Hi, the seeder is working when adding data to the database but will not work when trying to delete it. My code is below. Any help much appreciated.](https://www.udemy.com/course/nodejs-api-masterclass/learn/lecture/16581866#questions/13349668 "Google's Homepage")
+
+1. [Docker, microservices and kubernetes
+   This was the type of course I was looking for and I learned a lot. Thank you very much.
+   I was wondering if you plan on taking this course a step further and may be break it up in to microservices using docker, and kubernetes and deploy it on the cloud. If so, that would be awesome and I would help me a great deal and I am sure others can benefit as well.](https://www.udemy.com/course/nodejs-api-masterclass/learn/lecture/16581866#questions/13342794 "Exploring Docker [1] - Getting StartedExploring Docker [2] - Docker Compose With Node & MongoDBI think he mentions Brett Fisher who also has a great youtube channel and several good Udemy courses, one of which is very specific about Node apps in Dockerfiles. I've completed it, but there are about 3 or 4 key points I need to review and make notes on. Like how he switches to the Node User and why he prefers Slim over Alpine or vice versa.. a snippet he uses for closing the server process.. and how he recommends catching the std out. Oh, and why it's better to start the server with node instead of npm (extra process starting another process causes another issue)There's actually some very specific criticism he has of the standard example. after I finish the review and update my notes I'll be sure to post a copy of my compose file back here with a link to the repo.Search his channel for Node, he probably recaps most of it in each of these videos.")
